unpackaged/main/default/objects/loan__Charge__c/loan__Charge__c.object-meta.xml
<CustomObject>
    <description>Charge is something that is applied.</description>
    <label>Charge</label>
    <nameField>
        <displayFormat>CHG-{00000000}</displayFormat>
        <label>Charge Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>