unpackaged/main/default/objects/loan__Charge__c/fields/loan__Balance__c.field-meta.xml
<CustomField>
    <fullName>loan__Balance__c</fullName>
    <inlineHelpText>This field contains the principal balance on the loan after the charge has been applied.</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>