unpackaged/main/default/objects/loan__Charge__c/fields/loan__Calculated_Interest3__c.field-meta.xml
<CustomField>
    <fullName>loan__Calculated_Interest3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>View only field which shows the calculated interest from last accrual date from SOD process.</description>
    <label>Calculated Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>