unpackaged/main/default/objects/loan__Charge__c/fields/loan__Capitalization_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Capitalization_Date__c</fullName>
    <description>Charge's Capitalization Date</description>
    <inlineHelpText>Charge's Capitalization Date</inlineHelpText>
    <label>Capitalization Date</label>
    <type>Date</type>
</CustomField>