unpackaged/main/default/objects/loan__Charge__c/fields/loan__Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Date__c</fullName>
    <inlineHelpText>This is the date the charge was incurred.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>