unpackaged/main/default/objects/loan__Charge__c/fields/loan__Fee__c.field-meta.xml
<CustomField>
    <fullName>loan__Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The associated Fee. The Fee object is used in case of automatic application of a charge. For example, the late fees is charged automatically on a loan.</inlineHelpText>
    <label>Fee</label>
    <referenceTo>loan__Fee__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>