unpackaged/main/default/objects/loan__Charge__c/fields/loan__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate__c</fullName>
    <inlineHelpText>This is the interest rate to be applied on the charge (if applicable)</inlineHelpText>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>