unpackaged/main/default/objects/loan__Charge__c/fields/loan__Is_Charge_Capitalized__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Charge_Capitalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Capitalized</label>
    <type>Checkbox</type>
</CustomField>