unpackaged/main/default/objects/loan__Charge__c/fields/loan__Last_Accrual_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Accrual_Date__c</fullName>
    <description>Last accrual Date on charge (Usually the last payment transaction date)</description>
    <inlineHelpText>The date when the last interest accrual was processed</inlineHelpText>
    <label>Last Accrual Date</label>
    <type>Date</type>
</CustomField>