unpackaged/main/default/objects/loan__Charge__c/fields/loan__Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account__c</fullName>
    <inlineHelpText>The associated loan.</inlineHelpText>
    <label>Loan Account</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>