unpackaged/main/default/objects/loan__Charge__c/fields/loan__Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Original_Amount__c</fullName>
    <inlineHelpText>The original amount of the charge.</inlineHelpText>
    <label>Original Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>