unpackaged/main/default/objects/loan__Charge__c/fields/loan__Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>