unpackaged/main/default/objects/loan__Charge__c/fields/loan__Reference__c.field-meta.xml
<CustomField>
    <fullName>loan__Reference__c</fullName>
    <inlineHelpText>This text can be used to provide additional information about the charge.</inlineHelpText>
    <label>Reference</label>
    <type>TextArea</type>
</CustomField>