unpackaged/main/default/objects/loan__Charge__c/fields/loan__Status__c.field-meta.xml
<CustomField>
    <fullName>loan__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
                <default>true</default>
                <label>Processed</label>
            </value>
            <value>
                <fullName>Tax Calculated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>