unpackaged/main/default/objects/loan__Charge__c/fields/loan__Waive__c.field-meta.xml
<CustomField>
    <fullName>loan__Waive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag is set when the charge is fully waived.</inlineHelpText>
    <label>Waived</label>
    <type>Checkbox</type>
</CustomField>