unpackaged/main/default/objects/loan__Charge__c/fields/loan_payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan_payment_Amount__c</fullName>
    <label>loan payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>