unpackaged/main/default/objects/loan__Charge__c/validationRules/loan__Accrue_Interest_From_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Accrue_Interest_From_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Interest_Bearing__c = true &amp;&amp;
 ISBLANK(loan__Accrue_Interest_From__c)</errorConditionFormula>
    <errorMessage>For an interest bearing charge, please enter the accrue interest from date.</errorMessage>
</ValidationRule>