unpackaged/main/default/objects/loan__Charge__c/validationRules/loan__Check_Loan_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Loan_Status</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL( loan__Loan_Account__r.loan__Loan_Status__c , 'Active - Good Standing') ) &amp;&amp;
NOT(ISPICKVAL( loan__Loan_Account__r.loan__Loan_Status__c , 'Active - Bad Standing') ) &amp;&amp;
NOT(ISPICKVAL( loan__Loan_Account__r.loan__Loan_Status__c , 'Active - Matured') )</errorConditionFormula>
    <errorMessage>Charges can only be applied to active loans.</errorMessage>
</ValidationRule>