unpackaged/main/default/objects/loan__Charge__c/validationRules/loan__Edit_Paid_Charge_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Edit_Paid_Charge_Check</fullName>
    <active>true</active>
    <description>Charges that have a payment against them cannot be waived</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; loan__Paid__c  = true  &amp;&amp;
NOT(ISCHANGED(loan__Paid__c)) &amp;&amp;
(ISCHANGED(loan__Original_Amount__c) || ISCHANGED(loan__Paid_Amount__c) || ISCHANGED(loan__Reference__c) || ISCHANGED(loan__Interest_Bearing__c) || ISCHANGED(loan__Principal_Due__c ) || ISCHANGED(loan__Interest_Due__c ) || ISCHANGED(loan__Fee__c) || ISCHANGED(loan__Interest_Rate__c) || ISCHANGED( loan__Accrue_Interest_From__c ))</errorConditionFormula>
    <errorMessage>You cannot edit a paid charge.</errorMessage>
</ValidationRule>