unpackaged/main/default/objects/loan__Charge__c/validationRules/loan__Waive_Paid_Charges.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Waive_Paid_Charges</fullName>
    <active>false</active>
    <description>Charges that have a payment against them cannot be waived</description>
    <errorConditionFormula>loan__Waive__c  = true  &amp;&amp; loan__Paid_Amount__c  &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Charge cannot be waived as there is a payment made against it already</errorMessage>
</ValidationRule>